[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
dependencies = [
    "hypothesis>=6.152.2",
    "pytest>=9.0.3",
    "pytest-clarity>=1.0.1",
    "pytest-sugar>=1.1.1",
    "rich>=14.3.4",
    "ruff>=0.15.12",
]
name = "algorithms"
requires-python = ">=3.10"
version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["fit1008", "fit2004", "fit3155"]

[tool.pytest.ini_options]
addopts = "-vv -s --color=yes"
testpaths = ["fit1008", "fit2004", "fit3155"]

[tool.ruff]
exclude = ["__pycache__", ".venv"]
line-length = 80

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"
